# yaplon

./: .gitignore  BUILD.md  CHANGELOG.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PLAN.md  README.md  REFACTOR_FILELIST.txt  TODO.md  USAGE.md  activate-workflows.sh  dist.sh  llms.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
scripts/: build.py  build_binaries.py  release.py
tests/: helpers.py  test_cli.py  test_conversions.py  test_integration.py  test_json_sanitization.py  test_json_to_plist.py  test_json_to_xml.py  test_json_to_yaml.py  test_plist_to_json.py  test_plist_to_xml.py  test_plist_to_yaml.py  test_version.py  test_xml_to_json.py  test_xml_to_plist.py  test_xml_to_yaml.py  test_yaml_to_json.py  test_yaml_to_plist.py  test_yaml_to_xml.py
workflows-templates/: README.md  pr.yml  release.yml
yaplon/: __main__.py  _version.py  ojson.py  oplist.py  oyaml.py  plistlib.py  reader.py  writer.py
yaplon/file_strip/: comments.py  json.py
